# template-python-repository

./: .gitignore  .pre-commit-config.yaml  APP_NAME.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app_name.html  index.html  pyproject.toml  search.js  setup_template.py
.github/: dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: development_task.yaml
.github/actions/setup-venv/: action.yaml
.github/workflows/: docs.yaml  docs.yml  python_tests.yaml  test.yaml
APP_NAME/: algorithms.html
app_name/: algorithms.html
setup/: licenses.py  settings.py
src/APP_NAME/: __init__.py  algorithms.py
src/app_name/: algorithms.py
src/mobi_motion_tracking_zed/: algorithms.py
src/mobi_motion_tracking_zed/viewers/: __init__.py
src/mobi_motion_tracking_zed/viewers/cv_viewer/: __init__.py  tracking_viewer.py  utils.py
src/mobi_motion_tracking_zed/viewers/ogl_viewer/: __init__.py  viewer.py
tests/: conftest.py  test_fibonacci.py
